@@ -51,15 +51,20 @@ EOF
 
 REMOTE_DEBUG=""
 if [ "$ENABLE_REMOTE_DEBUG" = "true" ]; then
-    REMOTE_DEBUG="-agentlib:jdwp=transport=dt_socket,address=5000,server=y,suspend=${DEBUG_SUSPEND:-n}"
+    REMOTE_DEBUG="-agentlib:jdwp=transport=dt_socket,address=*:5000,server=y,suspend=${DEBUG_SUSPEND:-n}"
 fi
 
 LOG_PROPS="-Djava.util.logging.config.file=/srv/springboard/conf/logging.properties"
 
+# BouncyCastle security provider (registered in java.security). Appended to the
+# boot classpath as its original signed jar so the provider authenticates; -cp
+# cannot be used because the launcher starts with -jar.
+BCPROV="-Xbootclasspath/a:/opt/libs/bcprov-jdk18on-1.80.jar"
+
 final_vertx_conf_path="${VERTX_CONF_PATH:-/opt/conf/entcore.json}"
 
 if [ "$MODE" = "cluster" ]; then
-    exec java $JAVA_TOOL_OPTIONS $REMOTE_DEBUG $LOG_PROPS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dvertx.zookeeper.config=/srv/springboard/conf/zookeeper.json -jar /opt/vertx-service-launcher.jar -Dvertx.services.path=/srv/springboard/mods -Dvertx.disableFileCaching=true -conf $final_vertx_conf_path -cluster $VERTX_EXTRA_PARAMS
+    exec java $JAVA_TOOL_OPTIONS $REMOTE_DEBUG $LOG_PROPS $BCPROV -XX:+UnlockExperimentalVMOptions -Dvertx.zookeeper.config=/srv/springboard/conf/zookeeper.json -jar /opt/vertx-service-launcher.jar -Dvertx.services.path=/srv/springboard/mods -Dvertx.disableFileCaching=true -conf $final_vertx_conf_path -cluster $VERTX_EXTRA_PARAMS
 else
-    exec java $JAVA_TOOL_OPTIONS $REMOTE_DEBUG $LOG_PROPS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /opt/vertx-service-launcher.jar -Dvertx.services.path=/srv/springboard/mods -Dvertx.disableFileCaching=true -conf $final_vertx_conf_path $VERTX_EXTRA_PARAMS
+    exec java $JAVA_TOOL_OPTIONS $REMOTE_DEBUG $LOG_PROPS $BCPROV -XX:+UnlockExperimentalVMOptions -jar /opt/vertx-service-launcher.jar -Dvertx.services.path=/srv/springboard/mods -Dvertx.disableFileCaching=true -conf $final_vertx_conf_path $VERTX_EXTRA_PARAMS
 fi
